--- a/index.html
+++ b/index.html
@@ -2,6 +2,8 @@
 <html lang="en">
 
 <head>
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css" rel="stylesheet"
+        integrity="sha384-T3c6CoIi6uLrA9TneNEoa7RxnatzjcDSCmG1MXxSR1GAsXEV/Dwwykc2MPK8M2HN" crossorigin="anonymous">
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Mini Donas Paraná</title>
@@ -9,17 +11,19 @@
 
 <body>
     <header class="encabezado">
-        <div class="Botones">
-            <button class="boton2"><a href="#Nuestros-productos">Nuestros Productos</a></button>
-            <button class="boton3"><a href="#Consultas">Consultas</a></button>
+        <div class="btn-group" role="group" aria-label="Basic checkbox toggle button group">
+            <input type="checkbox" class="btn-check" id="btncheck1" autocomplete="off">
+            <label class="btn btn-outline-primary" for="btncheck1"><a href="#Consultas">Consultas</a></label>
+
+            <input type="checkbox" class="btn-check" id="btncheck2" autocomplete="off">
+            <label class="btn btn-outline-primary" for="btncheck2"><a href="#Nuestros-productos">Nuestros
+                    Productos</a></label>
         </div>
         <h1 id="titulo">Mini Donas Paraná</h1>
         <img class="logo" src="imagenes/Loogo minidonas.png" alt="logo" height="400" width="400">
 
     </header>
-<hr>
-<br>
-
+    <hr><br>
     <main>
         <h1 id="Nuestros-productos">Nuestros Productos</h1>
         <div class="contenedor-imagenes">
@@ -39,10 +43,7 @@
             <img class="imagenes" src="imagenes/donas 7.jpeg" alt="">
             <img class="imagenes" src="imagenes/donas 8.jpeg" alt="">
         </div>
-
     </main>
-
-
 
     <footer class="footer">
         <h1 id="Consultas">Consultas</h1>
