--- a/index.html
+++ b/index.html
@@ -16,8 +16,8 @@
             <label class="btn btn-outline-primary" for="btncheck1"><a href="#Consultas">Consultas</a></label>
 
             <input type="checkbox" class="btn-check" id="btncheck2" autocomplete="off">
-            <label class="btn btn-outline-primary" for="btncheck2"><a href="#Nuestros-productos">Nuestros
-                    Productos</a></label>
+            <label class="btn btn-outline-primary" for="btncheck2"><a
+                    href="#Nuestros-productos">NuestrosProductos</a></label>
         </div>
         <h1 id="titulo">Mini Donas Paraná</h1>
         <img class="logo" src="imagenes/Loogo minidonas.png" alt="logo" height="400" width="400">
@@ -25,25 +25,29 @@
     </header>
     <hr><br>
     <main>
-        <h1 id="Nuestros-productos">Nuestros Productos</h1>
-        <div class="contenedor-imagenes">
-            <img class="imagenes" src="imagenes/Precios.png" alt="">
-            <img class="imagenes" src="imagenes/glaseado.png" alt="">
-            <img class="imagenes" src="imagenes/choco blanco.jpg" alt="">
-            <img class="imagenes" src="imagenes/chocolate.jpg" alt="">
-            <img class="imagenes" src="imagenes/naranja.jpg" alt="">
-            <img class="imagenes" src="imagenes/frutilla.jpg" alt="">
-            <img class="imagenes" src="imagenes/Bandeja donas.jpg" alt="">
-            <img class="imagenes" src="imagenes/donas 1 .jpeg" alt="">
-            <img class="imagenes" src="imagenes/donas 3.jpeg" alt="">
-            <img class="imagenes" src="imagenes/donas 2.jpeg" alt="">
-            <img class="imagenes" src="imagenes/donas 4 .jpeg" alt="">
-            <img class="imagenes" src="imagenes/donas 5.jpeg" alt="">
-            <img class="imagenes" src="imagenes/donas 6.jpeg" alt="">
-            <img class="imagenes" src="imagenes/donas 7.jpeg" alt="">
-            <img class="imagenes" src="imagenes/donas 8.jpeg" alt="">
+        <div class="full-img" id="fullImgBox">
+            <img src="imagenes/Precios.png"  id="fullImg" alt="">
+<span onclick="closeImg()">X</span>
         </div>
+        <h1 id="Nuestros-productos">Nuestros Productos</h1>
+        <div class="img-galeria">
+            <img src="imagenes/Precios.png"   onclick="openFullImg(this.src)" alt="">
+            <img src="imagenes/donas 1 .jpeg" onclick="openFullImg(this.src)" alt="">
+            <img src="imagenes/donas 2.jpeg"  onclick="openFullImg(this.src)" alt="">
+            <img src="imagenes/donas 3.jpeg"  onclick="openFullImg(this.src)" alt="">
+            <img src="imagenes/donas 4 .jpeg" onclick="openFullImg(this.src)" alt="">
+            <img src="imagenes/donas 5.jpeg"  onclick="openFullImg(this.src)"alt="">
+            <img src="imagenes/donas 6.jpeg"  onclick="openFullImg(this.src)" alt="">
+            <img src="imagenes/donas 7.jpeg"  onclick="openFullImg(this.src)"alt="">
+            <img src="imagenes/donas 8.jpeg"  onclick="openFullImg(this.src)"alt="">
+            <img src="imagenes/donas 9.jpeg"  onclick="openFullImg(this.src)"alt="">
+            <img src="imagenes/donas 10.jpeg" onclick="openFullImg(this.src)"alt="">
+            <img src="imagenes/Bandeja donas.jpg" alt="">
+
+        </div>
+        <script src="Js/Scrypt.js"></script>
     </main>
+
 
     <footer class="footer">
         <h1 id="Consultas">Consultas</h1>
